fixed image bleed and menu break

--- a/src/components/MainMenu/scss/index.scss
+++ b/src/components/MainMenu/scss/index.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 12.5rem;  //3.55rem;
+  height: 12.5rem; //3.55rem;
   position: relative;
 
 
@@ -37,6 +37,10 @@
       align-items: center;
       height: 100%;
     }
+
+    @media (min-width: $extra-small-screen) and (max-width: $medium-screen) {
+      max-width: 50%;
+    }
   }
 
   &__right {
@@ -45,6 +49,10 @@
     order: 2;
     @media (min-width: $small-screen) {
       flex-basis: calc(50% - 4rem);
+    }
+
+    @media (min-width: $extra-small-screen) and (max-width: $medium-screen) {
+      max-width: 50%;
     }
 
     ul {
@@ -61,12 +69,17 @@
 
     //align-self: center;
 
+    @media (min-width: $extra-small-screen) and (max-width: $medium-screen) {
+      padding: 0 1rem;
+    }
+
     svg {
       width: 4rem;
 
       @media (min-width: $small-screen) {
         width: 6rem;
       }
+
     }
   }
 
@@ -210,6 +223,7 @@
 
     &:hover {
       color: $turquoise;
+
       svg * {
         fill: $turquoise;
       }
@@ -277,6 +291,7 @@
           padding-bottom: 9px;
           margin-bottom: 3px;
         }
+
         > ul > li:first-child {
           position: relative;
 
