--- a/src/views/BasePages/scss/base.scss
+++ b/src/views/BasePages/scss/base.scss
@@ -60,7 +60,7 @@
     .staff__card {
       padding: 15px;
       text-align: center;
-      flex: 50% 0 0;
+      flex: 47% 0 0;
       @media screen and (min-width: $small-screen) {
         flex-basis: 30%;
       }
